Changes to the history.txt file, now has the actual residency for Orlando

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
 This is Orlando's history
-Orlando is 25 years old and born in Venezuela
-and this is his story
+
+Orlando is 25 years old and born in Venezuela. 
+His now living in Venezuela.
+
+and this is his story.
