specifications about his height

--- a/history.txt
+++ b/history.txt
@@ -4,3 +4,5 @@ Orlando is 25 years old and born in Venezuela.
 His now living in Venezuela.
 
 and this is his story.
+
+He is tall, but, no so tall.
