he is studying to become a data scientist.

--- a/history.txt
+++ b/history.txt
@@ -6,3 +6,5 @@ His now living in Venezuela.
 and this is his story.
 
 He is tall, but, no so tall.
+
+Today he is studying to become a Data Scientist.
